--- a/styles/base.css
+++ b/styles/base.css
@@ -10,7 +10,7 @@
   }
 
   header {
-    background-color: #1d4d72;
+    background-color: #0f619f;
     text-align: center;
     width: 600px;
     margin: 0 auto;
@@ -149,10 +149,21 @@
     padding: 0;  
     display: flex; 
     align-items: center;  
-    justify-content: center;  
+    justify-content: center;
+    margin-bottom: 20px;  
   }
-  .card h3 {
-    margin-left: 10px; /* Alineación a la izquierda */
+ 
+  .card h2 {
+    font-size: 1em; /* Tamaño de fuente para todos los títulos h2 */
+    background-color: #0f619f; /* Color de fondo */
+    border-radius: 10px; /* Bordes redondeados */
+    color: white; /* Color del texto */
+    width: 100%; /* Ancho del elemento */
+    height: 30px; /* Altura del elemento */
+    text-align: center; /* Alineación del texto al centro */
+    line-height: 30px; /* Alineación vertical del texto al centro */
+    margin: 0; /* Elimina los márgenes */
+    padding: 0; /* Elimina el espacio interno */
   }
   
   .card ul {
@@ -163,6 +174,15 @@
   
   .card ul li {
     margin-bottom: 5px;
+  }
+
+  .card a {
+    max-width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    display: inline-block;
+    text-decoration: none;
   }
   
   main h2 {
