--- a/styles/base.css
+++ b/styles/base.css
@@ -138,7 +138,7 @@
   
   .card h3 {
     font-size: 1.2em;
-    background-color: #1d4d72;  
+    background-color: #080808;  
     border-radius: 10px;
     color: white;  
     width: 100%;  
