--- a/styles/base.css
+++ b/styles/base.css
@@ -135,7 +135,6 @@
 
   }
   
-  
   .card h3 {
     font-size: 1.2em;
     background-color: #080808;  
@@ -184,16 +183,35 @@
     display: inline-block;
     text-decoration: none;
   }
-  
+  .card-information {
+    flex: 1; /* Ajustar la altura de "card information" automáticamente */
+    /* Otras propiedades de estilo para ".card-information" */
+    max-width: 100%;
+    max-height: 40%; /* Asegura que la información de la tarjeta ocupe el 100% del ancho */
+    padding: 10px;
+    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.3);
+  }
+  .card-information h3 {
+    font-size: 1.2em;
+    background-color: #080808;  
+    border-radius: 10px;
+    color: white;  
+    width: 100%;  
+    height: 50px;  
+    text-align: center;  
+    line-height: 30px;   
+    margin: 0;  
+    padding: 0;  
+    display: flex; 
+    align-items: center;  
+    justify-content: center;
+    margin-bottom: 20px;  
+  }
   main h2 {
     width: 100%;  
     position: relative; 
     margin: 0 auto;  
     text-align: center;
-  }
-  .information p {
-    text-align: center; 
-    width: 100%;
   }
 
   footer {
