--- a/styles/base.css
+++ b/styles/base.css
@@ -149,25 +149,26 @@
     display: flex; 
     align-items: center;  
     justify-content: center;
-    margin-bottom: 20px;  
+    margin-bottom: 10px;  
   }
  
   .card h2 {
-    font-size: 1em; /* Tamaño de fuente para todos los títulos h2 */
-    background-color: #0f619f; /* Color de fondo */
-    border-radius: 10px; /* Bordes redondeados */
-    color: white; /* Color del texto */
-    width: 100%; /* Ancho del elemento */
-    height: 30px; /* Altura del elemento */
-    text-align: center; /* Alineación del texto al centro */
-    line-height: 30px; /* Alineación vertical del texto al centro */
-    margin: 0; /* Elimina los márgenes */
-    padding: 0; /* Elimina el espacio interno */
+    font-size: 1em;  
+    background-color: #0f619f;  
+    border-radius: 10px;   
+    color: white;  
+    width: 100%; 
+    height: 30px; 
+    text-align: center;  
+    line-height: 30px; 
+    margin: 0;  
+    padding: 0; 
+    margin-bottom: 10px;
   }
   
   .card ul {
     list-style-type: decimal; 
-    padding-left: 20px;
+    padding-left: 10px;
     margin: 0;
   }
   
@@ -184,10 +185,9 @@
     text-decoration: none;
   }
   .card-information {
-    flex: 1; /* Ajustar la altura de "card information" automáticamente */
-    /* Otras propiedades de estilo para ".card-information" */
+    flex: 1; 
     max-width: 100%;
-    max-height: 40%; /* Asegura que la información de la tarjeta ocupe el 100% del ancho */
+    max-height: 40%;  
     padding: 10px;
     box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.3);
   }
