--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -122,6 +122,35 @@ main {
     padding: 20px;
 }
 
+
+
+.banner{
+    display: none;
+    background-color: #4285f4;
+    color: #ffffff;
+    padding: 20px;
+    text-align: center; 
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+.banner-content {
+    display: flex;
+    justify-content: space-between;
+    justify-content: center;
+    align-items: center;   
+    font-size: 24px;
+    
+}
+.close-btn {
+    background: none;
+    border: none;
+    color: #ffffff;
+    font-size: 24px;
+    cursor: pointer;
+    padding-left: 50px;
+  
+}
+
 .current-events {
     flex: 2;  
     background-color: #fbefee;
