--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -126,8 +126,8 @@ main {
 
 .banner{
     display: none;
-    background-color: #4285f4;
-    color: #ffffff;
+    background-color: #e4b1ab;
+    color: #0a0a0a;
     padding: 20px;
     text-align: center; 
     margin-top: 15px;
