--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -126,19 +126,31 @@ main {
 
 .banner{
     display: none;
-    background-color: #e4b1ab;
-    color: #0a0a0a;
+    background: linear-gradient(to right, #df6a68, #e4b1ab); /* Degradado de color */
+    color: #ffffff;
     padding: 20px;
     text-align: center; 
     margin-top: 15px;
     margin-bottom: 15px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    animation: fadeIn 3s ease-out; /* Ajusta según sea necesario */
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 .banner-content {
     display: flex;
     justify-content: space-between;
     justify-content: center;
     align-items: center;   
-    font-size: 24px;
+    font-weight: bold;
+    font-size: 28px;
     
 }
 .close-btn {
@@ -148,8 +160,10 @@ main {
     font-size: 24px;
     cursor: pointer;
     padding-left: 50px;
-  
+
+
 }
+
 
 .current-events {
     flex: 2;  
