--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -133,7 +133,7 @@ main {
     margin-top: 15px;
     margin-bottom: 15px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    animation: fadeIn 3s ease-out; /* Ajusta según sea necesario */
+    animation: fadeIn 3s ease-out;  
 }
 
 @keyframes fadeIn {
