--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -201,11 +201,9 @@ main {
     width: 95%; /* Ajustamos el ancho de la línea al 80% del contenedor */
     padding-bottom: 5px;  
 }
-.temperature-icon {
-    max-width: 50px;  
-    max-height: 50px;  
-    vertical-align: middle;  
-    margin-left: 10px;   
+.weather-img {
+    width: 50px; /* Adjust the size as needed */
+    height: 50px; /* Adjust the size as needed */
 }
 .hero {
     position: relative; /* Establecer posición relativa */
