--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -271,8 +271,16 @@ main {
     text-align: center;
     font-size: 1.2rem;
     flex-grow: 1; /* Hace que los spotlights ocupen el espacio disponible */
-    min-width: 0; /* Permite que los spotlights se reduzcan si el contenido es más estrecho */
+    min-width: 0; 
+    width: 180px;/* Permite que los spotlights se reduzcan si el contenido es más estrecho */
+    height: 220px;
+    word-wrap: break-word;
+    white-space: normal;
 }
+.star {
+    color: yellow;
+}
+
 .thankyou-message {
     text-align: center;
 }
