--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -707,7 +707,7 @@ input:checked + .slider:before {
     .advertisement {
       margin-bottom: 10px;
       max-width: 100%;
-      width: 300px;
+      min-width: 300px;;
     }
   
     .flex-container {
