--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -266,7 +266,7 @@ main {
 }
 
 .advertisement {
-    background-color: #e39695;   
+    background-color: #f4b8b6;   
     padding: 20px;
     text-align: center;
     font-size: 1.2rem;
