--- a/rental/styles/base.css
+++ b/rental/styles/base.css
@@ -75,5 +75,26 @@ main {
 }
 
 footer {
-    /* Add your footer styles here */
+    
+}
+
+ 
+
+/* For screens up to 768px width (typical mobile devices) */
+/* Add this inside your existing styles or in a separate CSS file */
+.menu-toggle {
+    display: none; /* Hide the toggle button by default */
+}
+
+/* For screens up to 768px width (typical mobile devices) */
+@media screen and (max-width: 768px) {
+    .menu-section ul {
+        flex-direction: column;
+        align-items: flex-end;
+        display: none; /* Hide the menu items by default on small screens */
+    }
+
+    .menu-toggle {
+        display: block; /* Show the toggle button on small screens */
+    }
 }
