--- a/rental/styles/base.css
+++ b/rental/styles/base.css
@@ -56,9 +56,6 @@ header {
     text-decoration: none;
 }
 
-.header-title {
-    margin-top: 20px; /* Adjust the margin to control the separation from the menu */
-}
 
 main {
     width: 100%;
@@ -97,4 +94,13 @@ footer {
     .menu-toggle {
         display: block; /* Show the toggle button on small screens */
     }
+
+    .menu-section a {
+        font-size: 16px; /* Further reduce the font size for smaller screens */
+    }
+
+    .social-media a {
+        margin-left: 5px; /* Further reduce the margin for smaller screens */
+    }
+
 }
