--- a/rental/styles/base.css
+++ b/rental/styles/base.css
@@ -83,7 +83,7 @@ main {
 /* For screens up to 768px width (typical mobile devices) */
 @media screen and (max-width: 768px) {
     header {
-        height: 120px; /* Ajusta la altura según sea necesario */
+        height: 150px; /* Ajusta la altura según sea necesario */
         padding: 0 10px; /* Ajusta el relleno según sea necesario */
     }
 
@@ -96,9 +96,9 @@ main {
         flex-direction: column;
         align-items: center;
         position: absolute;
-        top: 80px; /* Ajusta la posición de los enlaces de menú según sea necesario */
+        top: 95px; /* Ajusta la posición de los enlaces de menú según sea necesario */
         left: 0;
-        background-color: #333;
+        color: transparent;
         width: 100%;
         z-index: 1; /* Añade z-index para que el menú aparezca sobre el contenido */
     }
@@ -109,29 +109,21 @@ main {
     .menu-links ul {
         width: 100%;
         text-align: center;
+        margin-top: 30px;
+        
        
     }
-
     .menu-links li {
         margin-right: 0;
         margin-bottom: 10px; /* Espaciado entre enlaces de menú en dispositivos móviles */
         font-size: 6px;
         padding-right: 10px;
+        
     }
 
     .menu-links a {
         font-size: 20px; /* Further reduce the font size for smaller screens */
         color: white; /* Añade color blanco al texto del enlace */
-    }
-
-    .social-media {
-        margin-top: 10px; /* Ajusta el margen superior según sea necesario */
-        text-align: center;
-    }
-
-    .social-media a {
-        display: inline-block; /* Muestra los iconos de redes sociales en línea */
-        margin: 0 5px; /* Ajusta el margen entre los iconos según sea necesario */
     }
 
     .menu-btn {
@@ -146,10 +138,19 @@ main {
         text-decoration: underline; /* Añade subrayado al pasar el ratón sobre el botón de menú */
     }
 
+    .social-media {
+        margin-top: 10px; /* Ajusta el margen superior según sea necesario */
+        text-align: center;
+        padding-right: 10px;
+    }
+
+    .social-media a {
+        display: inline-block; /* Muestra los iconos de redes sociales en línea */
+        margin: 0 5px; /* Ajusta el margen entre los iconos según sea necesario */
+    }
     .social-media a svg {
         width: 20px; /* Adjust the width as needed */
         height: 20px; /* Adjust the height as needed */
         fill: gold; /* Añade color dorado a los iconos de redes sociales */
     }
 }
-
