--- a/rental/styles/base.css
+++ b/rental/styles/base.css
@@ -96,7 +96,7 @@ main {
         flex-direction: column;
         align-items: center;
         position: absolute;
-        top: 95px; /* Ajusta la posición de los enlaces de menú según sea necesario */
+        top:20px; /* Ajusta la posición de los enlaces de menú según sea necesario */
         left: 0;
         color: transparent;
         width: 100%;
@@ -109,7 +109,8 @@ main {
     .menu-links ul {
         width: 100%;
         text-align: center;
-        margin-top: 30px;
+        display: flex;
+        flex-direction: column;
         
        
     }
@@ -127,15 +128,15 @@ main {
     }
 
     .menu-btn {
-        display: block; /* Muestra el botón de menú en la versión móvil */
+        display: block;
         font-size: 24px;
         color: white;
         cursor: pointer;
-        align-self: center;
-    }
-
-    .menu-btn:hover {
-        text-decoration: underline; /* Añade subrayado al pasar el ratón sobre el botón de menú */
+        align-self: flex-end; /* Alinea el botón al final del contenedor (esquina superior derecha) */
+        position: absolute; /* Posición absoluta en relación con el contenedor padre */
+        top: 10px; /* Distancia desde la parte superior */
+        right: 25px; /* Distancia desde la derecha */
+        z-index: 2; /* Asegura que el botón esté por encima del contenido del menú */
     }
 
     .social-media {
