--- a/rental/styles/base.css
+++ b/rental/styles/base.css
@@ -4,8 +4,10 @@ body, html {
 }
 
 header {
-    height: 200px;
-    background-color: #333; /* Change the background color as needed */
+    
+    background-image:url("https://sergiofdeveloper.github.io/wdd230px/rental/images/background.webp"); /* Reemplaza 'ruta-de-tu-imagen.jpg' con la ruta de tu imagen de fondo */
+    background-size: cover; /* Ajusta el tamaño de la imagen para cubrir completamente el área del header */
+    background-position: center;    
     color: white;
     display: flex;
     align-items: center;
