--- a/rental/styles/base.css
+++ b/rental/styles/base.css
@@ -5,7 +5,7 @@ body, html {
 
 header {
     
-    background-image:url("https://sergiofdeveloper.github.io/wdd230/rental/images/background.webp"); /* Reemplaza 'ruta-de-tu-imagen.jpg' con la ruta de tu imagen de fondo */
+    background-image:url("https://sergiofdeveloper.github.io/wdd230/rental/images/background.webp");
     background-size: cover; /* Ajusta el tamaño de la imagen para cubrir completamente el área del header */
     background-position: center;    
     color: white;
@@ -80,6 +80,67 @@ main {
     width: 100%;
     height: auto;
 }
+footer{
+    position: relative;
+    background-image: url("https://sergiofdeveloper.github.io/wdd230/rental/images/background.webp"); /* Reemplaza 'ruta-de-tu-imagen.jpg' con la ruta de tu imagen de fondo */
+    background-size: cover; /* Ajusta el tamaño de la imagen para cubrir completamente el área del footer */
+    background-position: center; /* Ajusta la posición de la imagen al centro */
+    color: white;
+    padding: 20px; /* Ajusta el relleno según sea necesario*/
+    text-align: center;
+}
+.footer-content {
+    position: relative;
+}
+.logo-footer{
+    margin-top: 20px;
+}
+
+.centered-content {
+    display: inline-block; /* Permite centrar el contenido */
+}
+
+.footer-menu {
+    position: absolute;
+    top: 0; /* Ajusta la posición vertical según sea necesario */
+    left: 50%; /* Centra horizontalmente */
+    transform: translateX(-50%); /* Ajusta la posición horizontal para centrar */
+     ;
+}
+
+.footer-menu nav ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+}
+
+.footer-menu nav li {
+    font-size: 20px; /* Ajusta el tamaño de la fuente según sea necesario */
+    margin-right: 15px;    
+}
+
+.footer-menu nav a {
+    color: white;
+    text-decoration: none;
+    font-size: 25px;
+    padding-right: 10px;
+}
+.footer-menu nav a:hover {
+    color: yellow;
+    text-shadow: 0 0 10px yellow; /* Ajusta la sombra del texto al hacer hover */
+}
+
+hr {
+    border: 0; /* Elimina el borde */
+    height: 1px; /* Ajusta la altura de la línea */
+    background-color: white;
+    margin: 20px 0; /* Ajusta el margen según sea necesario */
+}
+.project-info {
+    margin-top: 20px; /* Ajusta el margen superior según sea necesario */
+}
+
 
 
 /* For screens up to 768px width (typical mobile devices) */
@@ -155,5 +216,12 @@ main {
         width: 20px; /* Adjust the width as needed */
         height: 20px; /* Adjust the height as needed */
         fill: gold; /* Añade color dorado a los iconos de redes sociales */
+    }
+
+    .footer-menu nav a {
+        color: white;
+        text-decoration: none;
+        font-size: 12px;
+        padding-right: 5px;
     }
 }
