--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -275,7 +275,9 @@ main {
 }
 
 .advertisement {
-    background-color: #f4b8b6;   
+    background-image:url("https://sergiofdeveloper.github.io/wdd230/rental/images/ads-background.webp");
+    background-size: cover; /* Ajusta el tamaño de la imagen para cubrir completamente el área del header */
+    background-position: center;
     padding: 20px;
     text-align: center;
     font-size: 1.2rem;
