--- a/rental/styles/base.css
+++ b/rental/styles/base.css
@@ -12,7 +12,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 20px; /* Add padding to the header content */
+    padding: 0 20px;  
 }
 
 .logo img {
