--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -275,9 +275,7 @@ main {
 }
 
 .advertisement {
-    background-image:url("https://sergiofdeveloper.github.io/wdd230/chamber/images/ads-background.webp");
-    background-size: cover; /* Ajusta el tamaño de la imagen para cubrir completamente el área del header */
-    background-position: center;
+    background-color: #f4b8b6;   
     padding: 20px;
     text-align: center;
     font-size: 1.2rem;
