--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -199,7 +199,9 @@ main {
 }
 .weather-card {
     flex: 1;  
-    background-color: #fbefee;
+    background-image:url("https://sergiofdeveloper.github.io/wdd230/chamber/images/background-events.jpg");
+    background-size: cover; /* Ajusta el tamaño de la imagen para cubrir completamente el área del header */
+    background-position: center;
     padding-left: 20px; 
     font-size: 1.2rem; 
 }
