--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -179,10 +179,12 @@ main {
     background-image:url("https://sergiofdeveloper.github.io/wdd230/chamber/images/background-events.jpg");
     background-size: cover; /* Ajusta el tamaño de la imagen para cubrir completamente el área del header */
     background-position: center; 
-    margin-right: 10px;
+    margin-right: 30px;
     padding-left: 20px;
+    margin-top: 20px;
     font-size: 1.2rem; 
-    text-decoration: none
+    text-decoration: none;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 .current-events h2 {
     font-size: 2rem;
@@ -203,7 +205,9 @@ main {
     background-size: cover; /* Ajusta el tamaño de la imagen para cubrir completamente el área del header */
     background-position: center;
     padding-left: 20px; 
+    margin-top: 20px;
     font-size: 1.2rem; 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 .weather-card h2 {
     font-size: 2rem;
