--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -176,7 +176,7 @@ main {
 
 .current-events {
     flex: 2;  
-    background-image:url("https://sergiofdeveloper.github.io/wdd230/chamber/images/background-events.jpg");
+    background-image:url("https://sergiofdeveloper.github.io/wdd230/chamber/images/background-events.webp");
     background-size: cover; /* Ajusta el tamaño de la imagen para cubrir completamente el área del header */
     background-position: center; 
     margin-right: 30px;
@@ -201,7 +201,7 @@ main {
 }
 .weather-card {
     flex: 1;  
-    background-image:url("https://sergiofdeveloper.github.io/wdd230/chamber/images/background-events.jpg");
+    background-image:url("https://sergiofdeveloper.github.io/wdd230/chamber/images/background-events.webp");
     background-size: cover; /* Ajusta el tamaño de la imagen para cubrir completamente el área del header */
     background-position: center;
     padding-left: 20px; 
