--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -686,8 +686,22 @@ input:checked + .slider:before {
     }
   
     .switch {
-      display: block;
-      margin-top: 10px;
+        display: block;
+        margin-top: 10px;
+        width: 40px;  
+        height: 20px;  
+    }
+
+    .slider {
+        width: 40px;  
+        height: 20px;  
+    }
+
+    .slider:before {
+        width: 16px;  
+        height: 16px; 
+        left: 2px;  
+        bottom: 2px;  
     }
   
     .menu {
