--- a/rental/styles/base.css
+++ b/rental/styles/base.css
@@ -141,6 +141,92 @@ hr {
     margin-top: 20px; /* Ajusta el margen superior según sea necesario */
 }
 
+/*-------------------STYLES FORM --------------------------*/
+.background-form {
+    background-image: url('images/background-form.webp'); 
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    padding: 20px;
+    background-color: rgba(255, 255, 255, 0.1); /* Adjust the fourth value (0.1) to set the level of transparency */
+}
+form {
+    width: 50%;
+    max-width: 400px;  
+    margin: 2rem auto; 
+}
+
+form fieldset{
+    margin:rem 0;
+    border: 2px solid  goldenrod;
+    border-radius: 10px;
+    padding-left: 10px;
+    padding-bottom: 10px;
+}
+
+form legend{
+    color: #080808;
+    margin: 0 1rem;
+    padding: 0 0.5rem;
+}
+
+form label.top, form div{
+    display: block;
+    padding-top: 1rem;
+    color: #050505;
+    font-size: 1rem;
+}
+
+form label.top input, 
+form label.top select{
+    -webkit-appearance: none;
+    display: block;
+    font-size: 1rem;
+    border: solid 1px #999;
+    border-radius: 4px;
+    padding: .75rem;
+    color: #555;
+    width: 100%;
+    max-width: 20rem;
+    background-color: rgba(0,0,0,0.1);
+}
+form label.top textarea {
+    -webkit-appearance: none;
+    display: block;
+    font-size: 1rem;
+    border: solid 1px #999;
+    border-radius: 4px;
+    padding: 0.75rem;
+    color: #555;
+    width: 100%;
+    max-width: 20rem;  
+    height: 100px;  
+    max-height: 300px;  
+    background-color: rgba(0, 0, 0, 0.1);
+     
+}
+
+form input.submitBtn{
+    border:#080808;
+    background-color: goldenrod;
+    color: rgb(6, 6, 6);
+    border-radius: 1rem;
+    padding: .75rem 1.5rem;
+    margin: 0 0 2rem 25;
+    width: 50%;
+    max-width: 20rem;
+    margin-bottom: 10px;
+    margin-top: 20px;
+}
+/* esto es para ayudar con las casillas requeridas*/
+
+form label.top input:required{
+   border-left: red solid 6px; 
+}
+
+form label.top input:required:valid{
+    border-left: green solid 6px; 
+ }
 
 
 /* For screens up to 768px width (typical mobile devices) */
