--- a/rental/styles/base.css
+++ b/rental/styles/base.css
@@ -206,22 +206,24 @@ form label.top textarea {
      
 }
 
-form input.submitBtn{
-    border:#080808;
+form input.submitBtn {
+    border: none;
     background-color: goldenrod;
     color: rgb(6, 6, 6);
     border-radius: 1rem;
     padding: .75rem 1.5rem;
-    margin: 0 0 2rem 25;
+    margin: 0 auto 2rem auto; /* Centering the button horizontally and adding margin at the top and bottom */
     width: 50%;
     max-width: 20rem;
     margin-bottom: 10px;
     margin-top: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.);
 }
+
 /* esto es para ayudar con las casillas requeridas*/
 
 form label.top input:required{
-   border-left: red solid 6px; 
+   border-left: goldenrod solid 10px; 
 }
 
 form label.top input:required:valid{
