--- a/rental/styles/base.css
+++ b/rental/styles/base.css
@@ -148,8 +148,8 @@ hr {
     align-items: center;
     height: 100vh; /* Ajusta la altura según sea necesario */
     background-image: url("https://sergiofdeveloper.github.io/wdd230/rental/images/background-form.webp"); /* Ruta a tu imagen de fondo */
-    background-size: contain; /* Ajusta según tus necesidades */
-    background-position: center; /* Centra la imagen */
+    background-size: contain;  
+    background-position: center;  
     background-repeat: no-repeat;
     padding-top: 30px;
     padding-bottom: 30px;
@@ -161,14 +161,14 @@ hr {
     width: 100%;
     padding: 20px; /* Ajusta según tus necesidades */
     box-sizing: border-box;
-    background-color: rgba(255, 255, 255, 0.8); /* Color de fondo del formulario */
+    
    
 }
 
 .contact-main h1 {
-    font-size: 1.3rem; /* Ajusta según tus necesidades */
-    text-align: center; /* Centra el texto */
-    margin-bottom: 20px; /* Ajusta según tus necesidades */
+    font-size: 1.3rem;  
+    text-align: center;  
+    margin-bottom: 20px;  
 }
 
 form {
