--- a/rental/styles/base.css
+++ b/rental/styles/base.css
@@ -144,20 +144,13 @@ hr {
 /*-------------------STYLES FORM --------------------------*/
 .contact-main {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;  
-    background-image: url("https://sergiofdeveloper.github.io/wdd230/rental/images/background-form.webp"); /* Ruta a tu imagen de fondo */
-    background-size: contain;  
-    background-position: center;  
-    background-repeat: no-repeat;
-    padding-top: 30px;
-    padding-bottom: 30px;
-    
+    justify-content: space-between; /* Ajusta el espacio entre los elementos */
+    align-items: flex-start; /* Alinea los elementos en la parte superior */
+   
 }
 
 .background-form {
-    max-width: 1500px;
+    max-width: 66.66%;
     width: 100%;
     padding: 20px;  
     box-sizing: border-box;
@@ -256,25 +249,39 @@ form label.top input:required{
 form label.top input:required:valid{
     border-left: green solid 10px; 
  }
+ .addresses {
+    width: 33.33%; /* Establece el ancho al 33.33% para que ocupe 1/3 de la página */
+    box-sizing: border-box;
+}
 
+.addresses .address1,
+.addresses .address2 {
+    float: none; /* Reinicia el valor de flotación para que estén uno encima del otro */
+    width: 100%;  
+    margin-bottom: 20px;  
+    margin-top: 40px;
+}
 
 /* For screens up to 768px width (typical mobile devices) */
 @media screen and (max-width: 768px) {
+    body {
+        overflow-x: hidden; /* Evita el scroll horizontal en la versión móvil */
+    }
     header {
-        height: 150px; /* Ajusta la altura según sea necesario */
-        padding: 0 10px; /* Ajusta el relleno según sea necesario */
+        height: 150px;  
+        padding: 0 10px;  
     }
 
     .logo img {
-        max-height: 100px; /* Adjust the max height as needed */
+        max-height: 100px;  
     }
 
     .menu-links {
-        display: none; /* Oculta los enlaces de menú por defecto en dispositivos móviles */
+        display: none;  
         flex-direction: column;
         align-items: center;
         position: absolute;
-        top:20px; /* Ajusta la posición de los enlaces de menú según sea necesario */
+        top:20px;  
         left: 0;
         color: transparent;
         width: 100%;
@@ -294,15 +301,15 @@ form label.top input:required:valid{
     }
     .menu-links li {
         margin-right: 0;
-        margin-bottom: 10px; /* Espaciado entre enlaces de menú en dispositivos móviles */
+        margin-bottom: 10px;  
         font-size: 6px;
         padding-right: 10px;
         
     }
 
     .menu-links a {
-        font-size: 20px; /* Further reduce the font size for smaller screens */
-        color: white; /* Añade color blanco al texto del enlace */
+        font-size: 20px;  
+        color: white; 
     }
 
     .menu-btn {
@@ -312,25 +319,25 @@ form label.top input:required:valid{
         cursor: pointer;
         align-self: flex-end; /* Alinea el botón al final del contenedor (esquina superior derecha) */
         position: absolute; /* Posición absoluta en relación con el contenedor padre */
-        top: 10px; /* Distancia desde la parte superior */
-        right: 25px; /* Distancia desde la derecha */
+        top: 10px;  
+        right: 25px; 
         z-index: 2; /* Asegura que el botón esté por encima del contenido del menú */
     }
 
     .social-media {
-        margin-top: 10px; /* Ajusta el margen superior según sea necesario */
+        margin-top: 10px; 
         text-align: center;
         padding-right: 10px;
     }
 
     .social-media a {
-        display: inline-block; /* Muestra los iconos de redes sociales en línea */
-        margin: 0 5px; /* Ajusta el margen entre los iconos según sea necesario */
+        display: inline-block;   
+        margin: 0 5px;  
     }
     .social-media a svg {
-        width: 20px; /* Adjust the width as needed */
-        height: 20px; /* Adjust the height as needed */
-        fill: gold; /* Añade color dorado a los iconos de redes sociales */
+        width: 20px;  
+        height: 20px; 
+        fill: gold;  
     }
 
     .footer-menu nav a {
@@ -341,8 +348,8 @@ form label.top input:required:valid{
     }
     /*-------------------FORMS STYLES MEDIA VERSION-----------*/
     .contact-main {
-        background-image: none;  
-        padding: 10px;  
+        flex-direction: column; 
+        align-items: center;
     }
 
     .contact-main h1 {
@@ -351,6 +358,17 @@ form label.top input:required:valid{
 
     form {
         width: 90%;  
+    }
+    .background-form,
+    .addresses {
+        width: 100%; /* En la versión móvil, ambos ocupan el ancho completo */
+        max-width: 100%; /* Ajusta el ancho máximo al 100% */
+        margin-right: 0; /* Elimina el margen derecho en la versión móvil */
+        float: none; /* Reinicia la propiedad float */
+    }
+    .addresses .address1,
+    .addresses .address2 {
+        margin-bottom: 20px;
     }
 }
  
