--- a/rental/styles/base.css
+++ b/rental/styles/base.css
@@ -261,6 +261,26 @@ form label.top input:required:valid{
     margin-bottom: 20px;  
     margin-top: 40px;
 }
+/******************** RENTALS PAGE STYLES ***********************/
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+  }
+  
+  th, td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
+  }
+  
+  th {
+    background-color: #f2f2f2;
+  }
+
+
+
 
 /* For screens up to 768px width (typical mobile devices) */
 @media screen and (max-width: 768px) {
