--- a/rental/styles/base.css
+++ b/rental/styles/base.css
@@ -383,6 +383,25 @@ text-align: center;
     max-height: 600px; 
     margin-top: 20px;
 }
+/********************THANKS PAGE STYLES ***********************/
+#funstuff {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 20px; /* Espaciado entre las imágenes y textos */
+}
+
+.fun-item {
+    text-align: center;
+}
+
+.fun-item img {
+    width: 100%;
+    max-width: 250px;
+    height: auto;
+}
+
+
+
 
 
 /* For screens up to 768px width (typical mobile devices) */
